# runeward

./: .dockerignore  .gitignore  .goreleaser.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  go.mod  go.sum  install.sh  mkdocs.yml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dast.yml  docs.yml  release.yml  security.yml
adapters/: README.md
adapters/python/: README.md  pyproject.toml
adapters/python/runeward/: __init__.py  client.py  crewai_tools.py  langchain_tools.py  llamaindex_tools.py  openai_agents_tools.py  strands_tools.py
adapters/typescript/: README.md  package.json  tsconfig.json
cmd/runeward/: main.go
cmd/runeward-agent/: main.go
cmd/runeward-browser/: main.go
cmd/runeward-egress/: main.go
deploy/: Dockerfile  Dockerfile.agent  Dockerfile.egress  Dockerfile.sandbox
deploy/crds/: runeward.dev_clusterpolicies.yaml  runeward.dev_fleets.yaml  runeward.dev_sandboxes.yaml
deploy/grafana/: runeward-dashboard.json
deploy/prometheus/: runeward-alerts.yaml
docs/: E2E-TESTING.md  adapters.md  byo-model.md  cli.md  concepts.md  fleets.md  index.md  install.md  observability.md  profiles.md  quickstart.md  rest-api.md  security-model.md  why-governance.md
examples/: agent-demo.toml  agent-fleet.toml  browser-stateful.toml  browser.toml  build-fleet-k8s.toml  build-fleet.toml  byo-model-gateway.toml  cel-policy.toml  codex-agent.toml  codex-fleet.toml  codex-local.toml  cursor-agent.toml  cursor-fleet-k8s.toml  cursor-fleet.toml  dev.toml  drive-fleet.sh  egress-demo.toml  egress-strict.toml  fleet-demo.toml  fleet-k8s.toml  fleet.sh  governed.toml  k8s.toml  ns-auto.toml  policy-bundle.toml  py.toml  rego.toml
internal/accounting/: accounting.go  accounting_test.go
internal/agent/: agent.go  agent_test.go
internal/anomaly/: detector.go  detector_test.go
internal/auditsink/: file.go  sink.go  sink_test.go  (+1 more)
web/: app.js  index.html  style.css  web.go
(+148 files in other folders)
