[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runeward"
version = "0.1.0"
description = "Python client and agent-framework adapters for the runeward governed execution cell."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "TBD" }
authors = [{ name = "runeward" }]
keywords = ["ai", "agents", "sandbox", "mcp", "governance", "langchain", "crewai", "llamaindex", "openai-agents", "strands"]
# The core client is pure standard library — no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/Runewardd/runeward"
Repository = "https://github.com/Runewardd/runeward"

[project.optional-dependencies]
# Framework adapters are opt-in; they are imported lazily so the base client
# works without any of these installed.
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.30", "pydantic>=2"]
llamaindex = ["llama-index-core>=0.11"]
openai-agents = ["openai-agents>=0.0.1"]
strands = ["strands-agents>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["runeward"]
